# bio_meta_ic

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: default.yaml
config/tasks/: locomotion_pattern.yaml  target_mimic.yaml  waveform_following.yaml
csrc/: Makefile  fast_update.c  fast_update.h
examples/: build_bio_ic.py  quick_train.py  sample_target.npy
src/: main.py  run_task.py
src/bindings/: cffi_bind.py
src/circuit/: bio_circuit.py  c_backend.py  components.py  dynamics.py
src/cli/: args.py
src/meta_core/: logging_setup.py  meta_trainer.py  tasks.py  utils.py
src/models/: differentiable_ic.py  losses.py
src/viz/: export_for_blender.py  export_graph.py  visualize.py
tests/: test_circuit.py  test_meta.py  test_viz.py
